fix overflow when expanding notifications popup

--- a/src/app/styles/notification-widget/notification-widget.module.css
+++ b/src/app/styles/notification-widget/notification-widget.module.css
@@ -5,6 +5,7 @@
 .notificationList {
   display: none;
   position: absolute;
+  right: 0;
   background-color: white;
   box-shadow: 1px 1px 2px black;
   list-style: none;
